--- a/Week-2/Lab_2_fine_tune_generative_ai_model copy.ipynb
+++ b/Week-2/Lab_2_fine_tune_generative_ai_model copy.ipynb
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -2249,7 +2249,7 @@
       "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
       "---------------------------------------------------------------------------------------------------\n",
       "ORIGINAL MODEL:\n",
-      "#Person1# Would you like to upgrade your computer?\n",
+      "#Person2#: I'm thinking of adding a painting program to your software. #Person2#: I'm thinking of adding a frog. #Person2#: I'm thinking of adding a CD-ROM drive.\n",
       "---------------------------------------------------------------------------------------------------\n",
       "INSTRUCT MODEL:\n",
       "#Person1#: I'm thinking of upgrading my computer.\n"
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 64,
    "metadata": {
     "tags": []
    },
@@ -2337,7 +2337,7 @@
        "\"\"\", stored examples: 0)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {
     "tags": []
    },
@@ -2741,7 +2741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 66,
    "metadata": {
     "tags": []
    },
@@ -6441,7 +6441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -6455,12 +6455,12 @@
       "#Person1# teaches #Person2# how to upgrade software and hardware in #Person2#'s system.\n",
       "---------------------------------------------------------------------------------------------------\n",
       "ORIGINAL MODEL:\n",
-      "#Pork1: Have you considered upgrading your system? #Person1: Yes, but I'd like to make some improvements. #Pork1: I'd like to make a painting program. #Person1: I'd like to make a flyer. #Pork2: I'd like to make banners. #Person1: I'd like to make a computer graphics program. #Person2: I'd like to make a computer graphics program. #Person1: I'd like to make a computer graphics program. #Person2: Is there anything else you'd like to do? #Person1: I'd like to make a computer graphics program. #Person2: Is there anything else you need? #Person1: I'd like to make a computer graphics program. #Person2: I'\n",
+      "#Person1#: I'm not sure what I would need. #Person2#: I'm not sure what exactly I would need. #Person1#: I could also consider adding a painting program to your software. #Person1#: I'm not sure what exactly I would need. #Person1#: You could consider adding a painting program to your software. It would allow you to make up your own flyers and banners for your business. #Person1#: That would be a definite bonus. #Person2#: You might also want to add a CD-ROM drive too. #Person1#: I'm not sure what I would need.\n",
       "---------------------------------------------------------------------------------------------------\n",
       "INSTRUCT MODEL:\n",
-      "#Person1# suggests #Person2# upgrading #Person2#'s system, hardware, and CD-ROM drive. #Person2# thinks it's great.\n",
+      "#Person1#: I'm thinking of upgrading my computer.\n",
       "---------------------------------------------------------------------------------------------------\n",
-      "PEFT MODEL: #Person1# recommends adding a painting program to #Person2#'s software and upgrading hardware. #Person2# also wants to upgrade the hardware because it's outdated now.\n"
+      "PEFT MODEL: #Person1#: You can upgrade your system. #Person2#: I'm not sure what exactly you want to do. #Person1#: I'm not sure what you want to do. #Person2#: I'm not sure what you want to do. #Person1#: I'm not sure what you want to do. #Person2#: I'm not sure what I want to do. #Person2#: I'm not sure what I want to do. #Person1#: I'm not sure what I want to do. #Person2#: I'm not sure what I want to do. #Person1#: I'm not sure what I want to do. #Person2#: I'm not sure what I want to do. #Person1#: I'm not sure what I want to do.\n"
      ]
     }
    ],
@@ -6508,7 +6508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
@@ -6544,72 +6544,72 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Ms. Dawson helps #Person1# to write a memo to ...</td>\n",
-       "      <td>The new intra-office policy will apply to all ...</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
+       "      <td>Employees are required to take a dictation to ...</td>\n",
+       "      <td>#Person1#: I need to take a dictation for you.</td>\n",
+       "      <td>This memo is intended to be an intra-office memo.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>In order to prevent employees from wasting tim...</td>\n",
-       "      <td>Ms. Dawson will send an intra-office memo to a...</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
+       "      <td>The memo is being prepared for the intra-offic...</td>\n",
+       "      <td>#Person1#: I need to take a dictation for you.</td>\n",
+       "      <td>Employees will receive a memo from the Office ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ms. Dawson takes a dictation for #Person1# abo...</td>\n",
-       "      <td>The memo should go out today.</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
-       "      <td>#Person1# asks Ms. Dawson to take a dictation ...</td>\n",
+       "      <td>This memo is for internal and external communi...</td>\n",
+       "      <td>#Person1#: I need to take a dictation for you.</td>\n",
+       "      <td>#Person1#: Ms. Dawson, I need to take a dictat...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>#Person2# arrives late because of traffic jam....</td>\n",
-       "      <td>#Person1#: I'm here. #Person2#: I'm here. #Per...</td>\n",
-       "      <td>#Person2# got stuck in traffic again. #Person1...</td>\n",
-       "      <td>#Person2# got stuck in traffic and #Person1# s...</td>\n",
+       "      <td>The driver is a bit nervous.</td>\n",
+       "      <td>The traffic jam at the Carrefour intersection ...</td>\n",
+       "      <td>#Person2: I'm finally here. #Person1: I'm sorr...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>#Person2# decides to follow #Person1#'s sugges...</td>\n",
-       "      <td>The traffic jam is causing a lot of congestion...</td>\n",
-       "      <td>#Person2# got stuck in traffic again. #Person1...</td>\n",
-       "      <td>#Person2# got stuck in traffic and #Person1# s...</td>\n",
+       "      <td>People have been talking about the traffic jam...</td>\n",
+       "      <td>The traffic jam at the Carrefour intersection ...</td>\n",
+       "      <td>The conversation is about a car accident.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>#Person2# complains to #Person1# about the tra...</td>\n",
-       "      <td>I'm driving home from work.</td>\n",
-       "      <td>#Person2# got stuck in traffic again. #Person1...</td>\n",
-       "      <td>#Person2# got stuck in traffic and #Person1# s...</td>\n",
+       "      <td>#Porner1: You're finally here! #Person2: You'r...</td>\n",
+       "      <td>The traffic jam at the Carrefour intersection ...</td>\n",
+       "      <td>The conversation is about the traffic situatio...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>#Person1# tells Kate that Masha and Hero get d...</td>\n",
-       "      <td>Masha and Hero are divorced for 2 months.</td>\n",
-       "      <td>Masha and Hero are getting divorced. Kate can'...</td>\n",
-       "      <td>Kate tells #Person2# Masha and Hero are gettin...</td>\n",
+       "      <td>Masha and Hero are getting divorced.</td>\n",
+       "      <td>Masha and Hero are getting divorced.</td>\n",
+       "      <td>Masha and Hero are getting divorced.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>#Person1# tells Kate that Masha and Hero are g...</td>\n",
        "      <td>Masha and Hero are getting divorced.</td>\n",
-       "      <td>Masha and Hero are getting divorced. Kate can'...</td>\n",
-       "      <td>Kate tells #Person2# Masha and Hero are gettin...</td>\n",
+       "      <td>Masha and Hero are getting divorced.</td>\n",
+       "      <td>Masha and Hero are divorced.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>#Person1# and Kate talk about the divorce betw...</td>\n",
-       "      <td>#Person1#: Masha and Hero are getting divorced...</td>\n",
-       "      <td>Masha and Hero are getting divorced. Kate can'...</td>\n",
-       "      <td>Kate tells #Person2# Masha and Hero are gettin...</td>\n",
+       "      <td>The divorce is a very personal decision.</td>\n",
+       "      <td>Masha and Hero are getting divorced.</td>\n",
+       "      <td>Masha and Hero are getting a divorce.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>#Person1# and Brian are at the birthday party ...</td>\n",
-       "      <td>#Person1#: Happy birthday, Brian. #Person2#: T...</td>\n",
-       "      <td>Brian's birthday is coming. #Person1# invites ...</td>\n",
-       "      <td>Brian remembers his birthday and invites #Pers...</td>\n",
+       "      <td>#Person1#: Thank you for coming to the party. ...</td>\n",
+       "      <td>#Person1#: Happy birthday, Brian. #Person2#: I...</td>\n",
+       "      <td>Brian's birthday is coming up.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6629,43 +6629,43 @@
        "9  #Person1# and Brian are at the birthday party ...   \n",
        "\n",
        "                            original_model_summaries  \\\n",
-       "0  The new intra-office policy will apply to all ...   \n",
-       "1  Ms. Dawson will send an intra-office memo to a...   \n",
-       "2                      The memo should go out today.   \n",
-       "3  #Person1#: I'm here. #Person2#: I'm here. #Per...   \n",
-       "4  The traffic jam is causing a lot of congestion...   \n",
-       "5                        I'm driving home from work.   \n",
-       "6          Masha and Hero are divorced for 2 months.   \n",
+       "0  Employees are required to take a dictation to ...   \n",
+       "1  The memo is being prepared for the intra-offic...   \n",
+       "2  This memo is for internal and external communi...   \n",
+       "3                       The driver is a bit nervous.   \n",
+       "4  People have been talking about the traffic jam...   \n",
+       "5  #Porner1: You're finally here! #Person2: You'r...   \n",
+       "6               Masha and Hero are getting divorced.   \n",
        "7               Masha and Hero are getting divorced.   \n",
-       "8  #Person1#: Masha and Hero are getting divorced...   \n",
-       "9  #Person1#: Happy birthday, Brian. #Person2#: T...   \n",
+       "8           The divorce is a very personal decision.   \n",
+       "9  #Person1#: Thank you for coming to the party. ...   \n",
        "\n",
        "                            instruct_model_summaries  \\\n",
-       "0  #Person1# asks Ms. Dawson to take a dictation ...   \n",
-       "1  #Person1# asks Ms. Dawson to take a dictation ...   \n",
-       "2  #Person1# asks Ms. Dawson to take a dictation ...   \n",
-       "3  #Person2# got stuck in traffic again. #Person1...   \n",
-       "4  #Person2# got stuck in traffic again. #Person1...   \n",
-       "5  #Person2# got stuck in traffic again. #Person1...   \n",
-       "6  Masha and Hero are getting divorced. Kate can'...   \n",
-       "7  Masha and Hero are getting divorced. Kate can'...   \n",
-       "8  Masha and Hero are getting divorced. Kate can'...   \n",
-       "9  Brian's birthday is coming. #Person1# invites ...   \n",
+       "0     #Person1#: I need to take a dictation for you.   \n",
+       "1     #Person1#: I need to take a dictation for you.   \n",
+       "2     #Person1#: I need to take a dictation for you.   \n",
+       "3  The traffic jam at the Carrefour intersection ...   \n",
+       "4  The traffic jam at the Carrefour intersection ...   \n",
+       "5  The traffic jam at the Carrefour intersection ...   \n",
+       "6               Masha and Hero are getting divorced.   \n",
+       "7               Masha and Hero are getting divorced.   \n",
+       "8               Masha and Hero are getting divorced.   \n",
+       "9  #Person1#: Happy birthday, Brian. #Person2#: I...   \n",
        "\n",
        "                                peft_model_summaries  \n",
-       "0  #Person1# asks Ms. Dawson to take a dictation ...  \n",
-       "1  #Person1# asks Ms. Dawson to take a dictation ...  \n",
-       "2  #Person1# asks Ms. Dawson to take a dictation ...  \n",
-       "3  #Person2# got stuck in traffic and #Person1# s...  \n",
-       "4  #Person2# got stuck in traffic and #Person1# s...  \n",
-       "5  #Person2# got stuck in traffic and #Person1# s...  \n",
-       "6  Kate tells #Person2# Masha and Hero are gettin...  \n",
-       "7  Kate tells #Person2# Masha and Hero are gettin...  \n",
-       "8  Kate tells #Person2# Masha and Hero are gettin...  \n",
-       "9  Brian remembers his birthday and invites #Pers...  "
+       "0  This memo is intended to be an intra-office memo.  \n",
+       "1  Employees will receive a memo from the Office ...  \n",
+       "2  #Person1#: Ms. Dawson, I need to take a dictat...  \n",
+       "3  #Person2: I'm finally here. #Person1: I'm sorr...  \n",
+       "4          The conversation is about a car accident.  \n",
+       "5  The conversation is about the traffic situatio...  \n",
+       "6               Masha and Hero are getting divorced.  \n",
+       "7                       Masha and Hero are divorced.  \n",
+       "8              Masha and Hero are getting a divorce.  \n",
+       "9                     Brian's birthday is coming up.  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6710,7 +6710,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Compute ROUGE score for this subset of the data. "
@@ -6718,7 +6718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
@@ -6728,11 +6728,11 @@
      "output_type": "stream",
      "text": [
       "ORIGINAL MODEL:\n",
-      "{'rouge1': 0.2127769756385947, 'rouge2': 0.07849999999999999, 'rougeL': 0.1803101433337705, 'rougeLsum': 0.1872151390166362}\n",
+      "{'rouge1': 0.18386679635691494, 'rouge2': 0.06666666666666667, 'rougeL': 0.16831507535064846, 'rougeLsum': 0.17073404197910125}\n",
       "INSTRUCT MODEL:\n",
-      "{'rouge1': 0.41026607717457186, 'rouge2': 0.17840645241958838, 'rougeL': 0.2977022096267017, 'rougeLsum': 0.2987374187518165}\n",
+      "{'rouge1': 0.24089921652421653, 'rouge2': 0.11769053708439897, 'rougeL': 0.22001958689458687, 'rougeLsum': 0.22134175465057818}\n",
       "PEFT MODEL:\n",
-      "{'rouge1': 0.3725351062275605, 'rouge2': 0.12138811933618107, 'rougeL': 0.27620639623170606, 'rougeLsum': 0.2758134870822362}\n"
+      "{'rouge1': 0.23904636048685296, 'rouge2': 0.0965485859895798, 'rougeL': 0.214697694078679, 'rougeLsum': 0.2180915204000019}\n"
      ]
     }
    ],
@@ -6784,7 +6784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
@@ -6848,7 +6848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 71,
    "metadata": {
     "tags": []
    },
@@ -6882,7 +6882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {
     "tags": []
    },
